HFP-1314 Undo previous fix for horizontal scrollbars

--- a/src/styles/interactive-video.css
+++ b/src/styles/interactive-video.css
@@ -384,7 +384,6 @@
   left: 0;
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
   overflow-y: auto;
 }
 
